k8s/apps/omada-controller/overlays/305-1700-prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-controller
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.305-1700.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - omada.305-1700.tdude.co
    secretName: omada-controller-cert
  rules:
  - host: omada.305-1700.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omada-controller
            port:
              name: main
